Bugfix - ship now keeps active class if dropped out of bounds

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -6,7 +6,7 @@
   display: flex;
 }
 
-.gameboard, .row, .tile {
+.gameboard, .row, .tile, .ship-tile {
   user-drag: none;
   -webkit-user-drag: none;
   user-select: none;
@@ -27,6 +27,7 @@
 }
 
 .tile {
+  z-index: 1;
   width: 40px;
   height: 40px;
   border: 1px #afafaf solid;
@@ -37,13 +38,13 @@
   height: 40px;
   background-color: black;
   border: 1px #afafaf solid;
+  z-index: 45;
 }
 
 .ship {
   display: flex;
   transition: opacity 0.1s ease-out;
   width: min-content;
-  z-index: 15;
 }
 
 .ship.vertical {
